PFW-1500 - Fixed the button top spacing issue on product & cart pages

--- a/ppcp-gateway/css/wc-gateway-ppcp-angelleye-public.css
+++ b/ppcp-gateway/css/wc-gateway-ppcp-angelleye-public.css
@@ -263,9 +263,11 @@
 }
 .angelleye_ppcp-button-container #angelleye_ppcp_product, .angelleye_ppcp-button-container #angelleye_ppcp_cart {
     margin-bottom: 7px;
+    margin-top: 7px;
 }
 .angelleye_ppcp-button-container #angelleye_ppcp_product_apple_pay, .angelleye_ppcp-button-container #angelleye_ppcp_product_google_pay,
 .angelleye_ppcp-button-container #angelleye_ppcp_cart_apple_pay, .angelleye_ppcp-button-container #angelleye_ppcp_cart_google_pay{
+    margin-top: 7px;
     margin-bottom: 10px;
 }
 apple-pay-button {
